# kiln

./: .gitignore  controller_server.py  delta.py  delta_2.py  index.html  kiln_client.py  main.py  main_view.html  monitor.py  pyproject.toml  recording.txt  routes_snippet.py  web.py
src/: main.py
src/core/: config.py  delta_2.py  kiln.py  models.py  utils.py
src/routers/: hardware.py  monitoring.py  ui.py
static/js/: chart_utils.js
templates/: main.html  pattern_editor.html  patterns.html  settings.html
templates/partials/: dashboard.html
